Fix breaks in appendix glossary

--- a/styles/designs/cosmos/parts/_lists-components.scss
+++ b/styles/designs/cosmos/parts/_lists-components.scss
@@ -73,5 +73,6 @@ $UnorderedList__Item--AppendixGlossary: (
   _properties: (
     text-indent: -5px, // creates a hanging indent
     padding-left: 5px,
+    break-inside: avoid,
   )
 );
